--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -289,7 +289,8 @@
     "from": "Von",
     "period": "Reisezeitraum",
     "person": "Pro person",
-    "moreButton": "Erfahren Sie mehr"
+    "moreButton": "Erfahren Sie mehr",
+    "night": "Nacht"
   },
 
   "contactForm": {
