--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -329,6 +329,7 @@
     "cancel": "Cancel",
     "contactInfo": "Contact info",
     "day": "Day",
+    "days": "Day",
     "total": "in total",
     "person": "Pro person",
     "download": "Download the program",
@@ -646,7 +647,7 @@
     "inputLabel25": "Country",
     "inputLabel26": "City",
     "inputLabel27": "Address line",
-    "inputLabel28": "ZIP Code *",
+    "inputLabel28": "ZIP Code",
     "inputLabel29": "At store",
     "inputLabel30": "Full name and surname",
     "inputLabel31": "Full Time",
