--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -688,6 +688,7 @@
     "areasOf": "Areas of",
     "notFoundText": "Haven’t found what you’ve been looking for?",
     "select": "Select...",
+    "notFoundPage": "Page not found",
 
     "addSubRegion": "add sub-region",
     "nightPro": "Night Pro 1 Person",
