--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -695,6 +695,7 @@
     "selectRegionText": "Wählen Sie das Gebiet, das Sie entdecken möchten",
     "areasOf": "Gebiete von",
     "notFoundText": "Sie haben nicht gefunden, wonach Sie gesucht haben?",
+    "notFoundPage": "Seite nicht gefunden",
     "addSubRegion": "Unterregion hinzufügen",
     "nightPro": "Night Pro 1 Person",
     "forChanging": "für Umkleideraumtyp",
