Feat  thank you page (#124)
* feat thank you page

* feat thankYou page and fix privacy policy

* feat thankYou page and fix privacy policy

* feat thankYou page and fix privacy policy

* fix bugs

Co-authored-by: FeNRiR <germes955@gamail.com>

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -568,7 +568,7 @@
     "invoiceBlock1": "Versand des/der Geschenkgutschein(e): nach Eingang des Rechnungsbetrages",
     "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail von der ausgewählten Filiale zugesandt.",
     "invoiceBlock3": "Gültigkeit:Der Gutschein wird nach Zahlung des Rechnungsbetrages gültig.",
-    "buttonDone": "Bestellung bestätigen"
+    "buttonDone": "Erledigt"
   },
 
   "hotels": {
