--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -412,10 +412,7 @@
     "carRental": "Mietwagenbestimmungen",
     "rentPrice": "Mietpreis für X Tage:",
     "selected": "Ausgewählt",
-    "terms": "Bedingungen und Konditionen",
-
-    "text1": "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz",
-    "text2": "zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+    "terms": "Bedingungen und Konditionen"
   },
 
   "terms": {
