--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -262,7 +262,7 @@
     "proPerson": "pro person",
     "addRoom": "Zimmer hinzufügen",
     "startTripButton": "Reiseplanung starten",
-    "highlights": "Highlights:",
+    "highlights": "Highlights",
     "tab1": "Reiseplan",
     "tab2": "Insider-Tipps",
     "tab3": "Zugehörige Touren",
