--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -199,7 +199,7 @@
     "WorldwideToursTitle": "Weltweite Reisen",
     "WorldwideToursSubTitle": "Füllen Sie das Online-Formular aus und lassen Sie die Experten des Laros Reisen Teams Ihre Traumreise planen! Unser Team kann Ihnen jeden gewünschten Reiseservice bieten, wie wir es in den letzten 30 Jahren getan haben. Von einer einfachen Flugbuchung bis hin zu personalisierten Empfehlungen und Aktivitäten in der Gegend, die Sie besuchen möchten, wir sind rund um die Uhr für Sie da, um Ihnen zu helfen, Ihren Urlaub auf eine höhere Stufe zu heben.",
     "GoBack": "Zurück",
-    "ContactUs": "Sie haben nicht gefunden, wonach Sie gesucht haben? Κοntakt",
+    "ContactUs": "Sie haben nicht gefunden, wonach Sie gesucht haben?",
     "Tab_1": "Fluganfrage",
     "Tab_2": "Pauschalreise anfragen",
     "label1": "Abreise von",
