--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -195,15 +195,15 @@
     "Tab_2": "Pauschalreise anfragen",
     "label1": "Abreise von",
     "label2": "Ankunft in",
-    "label3": "früheste Abreise",
-    "label4": "späteste Rückreise",
+    "label3": "Früheste Abreise",
+    "label4": "Späteste Rückreise",
     "label5": "Klasse",
     "label6": "Reisende/Reisender",
     "label7": "Vor- und Nachname",
     "label8": "Staatsangehörigkeit",
     "label9": "Geschlecht",
     "label10": "Geburtsdatum",
-    "label11": "weitere Bemerkungen",
+    "label11": "Weitere Bemerkungen",
     "label12": "Tippen Sie zum Hinzufügen",
     "label13": "Transfer",
     "label14": "Hotelkategorie",
