--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -637,7 +637,7 @@
     "email2": "jon@knownothing.net",
     "email3": "jon.doe@example.com",
     "larosEmail": "info@laros.ch",
-    "phoneNumber": "+ 41 061 / 756 80 80"
+    "phoneNumber": "+ 41 061 756 80 80"
   },
   "common": {
     "contactText": "Contact",
