--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -307,6 +307,7 @@
     "tab4": "Reiseziele in der Nähe",
     "tab5": "Kontakt",
     "seeMore": "Mehr ansehen",
+    "overnight": "Übernachtung im",
     "areasOfTitle": "Gebiete von",
     "areasOfSubTitle": "Unten finden Sie ein paar unbekannte Orte, die darauf warten, von Ihnen entdeckt zu werden!."
   },
