--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -247,6 +247,7 @@
     "highlights": "Highlights",
     "seeMore": "See more",
     "areasOfTitle": "Areas of",
+    "overnight": "Overnight in",
     "areasOfSubTitle": "At ultrices rhoncus sit vel viverra viverra. Arcu pellentesque gravida in orci, pretium nulla volutpat leo."
   },
   "tripCard": {
