--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -734,7 +734,7 @@
     "notFoundText": "Sie haben nicht gefunden, wonach Sie gesucht haben?",
     "notFoundPage": "Seite nicht gefunden",
     "addSubRegion": "Unterregion hinzufügen",
-    "nightPro": "Night Pro 1 Person",
+    "nightPro": "pro Nacht pro 1 Person",
     "forChanging": "für Umkleideraumtyp",
     "addLocation": "Hinzufügen von Standorten",
     "traveler": "Reisende",
