fix: text in thank you modal (#218)

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -184,6 +184,7 @@
     "privacyPolicy": "Wenn Sie auf die Schaltfläche 'Senden' klicken, erklären Sie sich automatisch mit unseren Allgemeinen Geschäftsbedingungen und unserer Datenschutzrichtlinie einverstanden.",
     "thanks": "Ich danke Ihnen!",
     "text": "Enim fermentum faucibus arcu adipiscing mollis aliquet. In velit id amet quam et enim viverra. Malesuada facilisis amet leo at nisi.",
+    "text2": "Vielen Dank für Ihr Interesse an unserer Firma. Unsere Personalabteilung hat Ihren Lebenslauf erhalten. Viel Glück!",
     "return": "Zurück zur Startseite",
     "noVacancies": "Zurzeit keine freien Stellen."
   },
