--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -133,6 +133,7 @@
     "privacyPolicy": "By clicking the “Send” button you automatically agree to our Terms & conditions and Privacy Policy",
     "thanks": "Thank you!",
     "text": "Enim fermentum faucibus arcu adipiscing mollis aliquet. In velit id amet quam et enim viverra. Malesuada facilisis amet leo at nisi.",
+    "text2": "Vielen Dank für Ihr Interesse an unserer Firma. Unsere Personalabteilung hat Ihren Lebenslauf erhalten. Viel Glück!",
     "return": "Return to home page",
     "noVacancies": "No Vacancies for now."
   },
