--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -167,7 +167,9 @@
     "thanks": "Ich danke Ihnen!",
     "text": "Enim fermentum faucibus arcu adipiscing mollis aliquet. In velit id amet quam et enim viverra. Malesuada facilisis amet leo at nisi.",
     "return": "Zurück zur Startseite",
-    "noVacancies": "Zurzeit keine freien Stellen."
+    "noVacancies": "Zurzeit keine freien Stellen.",
+    "thankYou": "Vielen Dank für Ihr Interesse an unserer Firma.",
+    "thankYouDescr": "Unsere Personalabteilung hat Ihren Lebenslauf erhalten. Viel Glück!"
   },
 
   "aboutModal": {
@@ -205,7 +207,9 @@
     "cancel": "Abbrechen",
     "buttonSend": "Senden Sie",
     "downloadModalTitle": "Herunterladen der Broschüre",
-    "buttonDownload": "Herunterladen"
+    "buttonDownload": "Herunterladen",
+    "thankYou": "Vielen Dank für ihr Interesse.",
+    "thankYouDescr": "Ihr Katalog ist bereits unterwegs."
   },
   "destinations": {
     "selectRegion": "Wählen Sie das Gebiet, das Sie entdecken möchten",
@@ -236,7 +240,9 @@
     "flightRequestText": "Fluganfrage",
     "requestPackageText": "Pauschalreise anfragen",
     "selectRegion": "Wählen Sie das Gebiet, das Sie entdecken möchten",
-    "buttonMore": "Mehr"
+    "buttonMore": "Mehr",
+    "thankYou": "Vielen Dank für Ihre Anfrage!",
+    "thankYouDescr": "Das Laros-Team bearbeitet momentan Ihre Anfrage und wird sich umgehend mit Ihnen in Verbindung setzen. Ihre nächste Reise ist nur einen Klick entfernt :)"
   },
   "worldwideTours": {
     "WorldwideToursTitle": "Weltweite Reisen",
@@ -280,7 +286,9 @@
   "travelPlanner": {
     "title": "Reiseplaner",
     "subtitle": "Unsere Top-Reisekategorien",
-    "moreCategoriesText": "Mehr Kategorien"
+    "moreCategoriesText": "Mehr Kategorien",
+    "thankYou": "Vielen Dank für Ihre Anfrage!",
+    "thankYouDescr": "Das Laros-Team bearbeitet momentan Ihre Anfrage. Ihre nächste Reise ist nur einen Klick entfernt :)"
   },
   "travelPlannerCategory": {
     "title": "Inselfieber",
@@ -346,7 +354,9 @@
     "follow": "Folgen Sie uns auf",
     "mr": "Herr",
     "mrs": "Frau",
-    "ms": "Fräulein"
+    "ms": "Fräulein",
+    "thankYou": "Vielen Dank für Ihre Nachricht!",
+    "thankYouDescr": "Das Laros-Team wird Sie umgehend kontaktieren!"
   },
 
   "tripSteps": {
@@ -610,7 +620,11 @@
     "invoiceBlock1": "Versand des/der Geschenkgutschein(e): nach Eingang des Rechnungsbetrages",
     "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail von der ausgewählten Filiale zugesandt.",
     "invoiceBlock3": "Gültigkeit:Der Gutschein wird nach Zahlung des Rechnungsbetrages gültig.",
-    "buttonDone": "Erledigt"
+    "buttonDone": "Erledigt",
+    "thankYou": "Vielen Dank für Ihre Bestellung.",
+    "thankYouDescr": "Das Laros-Team bearbeitet momentan Ihre Bestellung. Ihr Geschenkgutschein ist unterwegs!",
+    "thankYouStore": "Vielen Dank für Ihre Bestellung.",
+    "thankYouDescrStore": "Das Team bearbeitet momentan Ihre Bestellung und teilt Ihnen mit, wenn Ihre Bestellung in unserem Büro zur Abholung bereit ist!"
   },
   "hotels": {
     "title": "Hotels",
