--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -55,7 +55,6 @@
     "descText3": "Das Team von Laros Reisen steht Ihnen natürlich jederzeit für allfällige Fragen zur Verfügung, vor, während und nach Ihrer Reise.",
     "lastDescription": "Sie können jedoch sicher sein, dass das erfahrene Team von Reiseberatern unseres Büros Ihnen bei allen Anfragen rund um das Reisen in jeder Ecke der Welt behilflich sein kann. Unsere langjährige Erfahrung in der Reisebranche macht uns zur richtigen Wahl für jede Reise, die Sie planen möchten.Von Urlaubsreisen und Fähr-, Flug- oder Bahntickets bis hin zu spezielleren Angeboten für Individual- und Themenreisen, Hochzeits- und Geschäftsreisen und Konferenzen können wir jeden Ihrer Wünsche erfüllen.Unser Team steht Ihnen während Ihrer gesamten Anfrage zur Seite, von dem Moment an, in dem Sie uns wegen Ihrer Reise kontaktieren, bis hin zu Ihrer Ankunft und Rückkehr. Der 24-Stunden-Notdienst ist ein wichtiger Service unserer kundenorientierten Firmenphilosophie, mit dem Ziel, Ihnen in allen Situationen zur Seite zu stehen. Am 1.1.2021, nach 35 Jahren, wurde Laros Reisen GmbH in neue Hände übergeben. Die neuen Eigentümer sind die Söhne der Besitzer unserer Hauptagentur Antaeus Travel in Griechenland, mit welcher bereits seit 30 Jahren eine wertvolle Zusammenarbeit besteht. Georgios Chatzantonis und Athanasios Nikolaou haben ihr Studium in der Schweiz abgeschlossen und sind seit vielen Jahren mit dem Griechenland Angebot von Laros Reisen vertraut. Sie haben sich entschlossen das Produkt von Laros Reisen, das für seinen guten Service und die fundierten Landeskenntnisse bekannt ist, weiterzuführen und auszubauen. Die langjährigen Mitarbeiterinnen sowie das bestehende Büro in Aesch werden übernommen. Vorläufig werden sie nach Bedarf auch noch auf die Unterstützung und Mitarbeit der Gründer der Firma, Yolanda und Georgios Labaras, zählen können. Somit ist das Weiterbestehen des Griechenlandspezialisten mit seinen Nischenangeboten auch für die Zukunft gesichert."
   },
-
   "team": {
     "title": "Lernen Sie unser Team in der Schweiz und Griechenland kennen",
     "description": "Unsere Reiseexperten mit eigener Erfahrung zu unseren angebotenen Reisezielen stellen Ihre Reise zusammen, stehen Ihnen von Anfang bis Ende Ihrer Reise zur Seite und freuen sich Ihre Reisegeschichten zu hören.",
@@ -72,44 +71,34 @@
     "Team_6_profession": "Reiseexpertin",
     "Team_6_description": ""
   },
-
   "testimonials": {
     "title": "Was über uns gesagt wird",
     "description": "HIER FINDEN SIE EINIGE AUSZÜGE AUS RÜCKMELDUNGEN von unseren Kunden in der Saison 2016-2022",
-
     "card_1_name": "",
     "card_1_tripName": "Rückmeldung vom September 2022 / Rhodos-Symi",
     "card_1_text": "Ja, wir sind wieder gut in der kalten Schweiz angekommen. Alles hat wunderbar geklappt und es hat uns sehr gefallen. ☺ Vor allem Symi ist einmalig schön, wir waren total begeistert!! Das Hotel ist sehr gut gelegen, etwas erhöht und wir hatten eine tolle Sicht vom Zimmer auf den Hafen. Einen Tag haben wir einen Roller gemietet und die Insel erkundet. Auch Rhodos hat uns gefallen, dort haben wir dann zur Abwechslung noch für einen Tag ein Auto gemietet. Alles in allem also ein toller Urlaub und wir sind froh, haben wir uns dazu entschieden.",
-
     "card_2_name": "",
     "card_2_tripName": "Rückmeldung vom September 2022 / Saronische Inseln",
     "card_2_text": "Bereits sind wir wieder 1 Woche aus unseren Ferien in Ägina (inkl. Agistri und Aponisos), Poros, Spetses und Hydra zurück. Die Inseln sowie die Unterkünfte waren allesamt sehr unterschiedlich, jedoch hat es uns überall gut gefallen! Es hat auch - wie immer - alles hervorragend geklappt mit dem Transfer und den Hotels. Vielen Dank nochmals für die hervorragende Organisation und liebe Grüsse",
-
     "card_3_name": "",
     "card_3_tripName": "Auszug aus einer Rückmeldung vom September 2022 / Serifos-Sifnos-Milos",
     "card_3_text": "Sehr geschätztes Laros Team Wir möchten uns noch einmal ganz herzlich bedanken für die super Organisation dieser Reise. Es hat einfach alles hervorragend geklappt, sie haben zuverlässige Partner. Transferdienst, Autoverleiher die pünktlich und fair sind und Hotels, denen sie unser Dank und Kompliment weiter geben dürfen. Das Wetter hat natürlich noch das seine beigetragen. Wir wünschen dem ganzen Team weiterhin viel Erfolg. Freundliche Grüsse",
-
     "card_4_name": "",
     "card_4_tripName": "Auszug aus einem Reisebericht vom August 2022 / Samos-Agathonissi-Arki-Patmos-Ikaria--Athen",
     "card_4_text": "Wir sind wie jedes Jahr hell begeistert von einer wunderschönen Reise nach Hause gekommen. Sie haben uns wieder an tolle, eindrucksvolle Orte reisen lassen und wir möchten uns ganz herzlich dafür bedanken. Angefangen haben unsere Ferien bereits wie in den letzten Jahren, einen Tag vor Abflug im Leonardo Hotel Zürich Flughafen. Vor 12 Jahren waren wir zum ersten Mal in Griechenland auf Samos, es hatte uns sehr gefreut, wieder auf diese Insel zu reisen und haben vieles wieder erkannt. Sogar ein Wirtepaar in einer Taverne ausserhalb konnte sich an uns erinnern. Das Hotel war wunderschön, sauber und mit sehr nettem Personal. Da wir wie immer sehr gerne zu Fuss unterwegs sind, war der Weg an den Strand jeweils eine schöne Tour über Stock und Stein. Weiter ging es nach Agathonisi wo wir in einem wunderschönen, grossen neuen Studio wohnen durften. Der Empfang durch Francesca und ihrem Vater Markus war so herzlich und wir fühlten uns von der ersten Sekunde an wie zu Hause... Von Arki waren wir sehr begeistert. So eine kleine Insel, mit so wenig Einwohnern und so viel Spass auf dem Dorfplatz. Wir hatten die ganze Insel zu Fuss erkundigt und gingen bei all den wunderschönen Stränden schwimmen... Patmos: Das Hotel ist sehr sauber, trotz Zentrum in der Nähe ruhig gelegen und das Frühstück war sehr gut. Weiter ging es nach Ikaria. Als uns bei der Abholung zur Fahrt zum Hotel gesagt wurde, dass diese ca. 1 ½ Stunden ging, fanden wir es sei extrem lange, aber als es losging, war es wunderschön, durch diese so dicht bewachsene, grüne Insel zu fahren, vor allem die Höhe der Berge hat uns zum Staunen gebracht. So eine schöne Insel mit so viel Vegetation hatten wir in all den Jahren noch nie gesehen. Auch die Strände, Flüsse mit all den Schildkröten, kleinen Seen mit all dem Schilf und Pflanzen hat uns begeistert. Das Hotel war auch wunderschön, mit einem herrlichen Blick auf das Meer und einem hervorragenden Frühstück... Athen am Schluss ist für uns immer ein spezielles Erlebnis. Wir dürfen, im für uns schönsten Hotel, mit dem besten Frühstück sein. So langsam kennen wir uns etwas besser in dieser Stadt aus, welche uns schon vor Jahren begeistert hatte. Unsere Reise mit Laros Reisen war perfekt, wir können kaum in Worte fassen, wie wir immer zufrieden mit der Organisation, Hotels, Destinationen, Abholung sind. Und wie bereits bei der Insel Arki erwähnt, der unkomplizierten Organisation falls eine Fähre sich verspätet, oder ein Flug verschoben wird. Natürlich auch dank der guten Vertretungen in Griechenland selber. Vielen Dank und die liebsten Grüsse von zwei Laros Ferien Fans",
-
     "card_5_name": "",
     "card_5_tripName": "Rückmeldung vom Juni 2022 / Andros",
     "card_5_text": "Wir möchten uns bei Ihnen recht herzlich bedanken, für die perfekten Reiseunterlagen. Hat alles bestens geklappt. Vielen Dank. Wir werden sicher wieder bei Ihnen buchen, wenn wir wieder nach Griechenland reisen.",
-
     "card_6_name": "",
     "card_6_tripName": "Auszug aus einer Rückmeldung vom Juni 2022  / Rhodos-Symi-Chalki",
     "card_6_text": "Die Reise nach Rhodos, Symi und Chalki war ein Traum! Die Villa in Rhodos war einfach wunderschön, die Aussicht überwältigend. Der Besitzer und Geschäftsführer sooo nett. Dann die mir bekannte Insel Symi, das Hotel entsprach unseren Erwartungen und die Insel mit den schönen Stränden liess keine Wünschen offen. Chalki ...Was für eine Insel! Ich habe noch nirgends so klares Wasser gesehen ! Das Hotel ist wunderschön und der Hotelier mehr als charmant. Alles in Allem eine ganz tolle Reise, die wir sofort wieder machen würden!!! Mit vielem Dank und Grüssen!",
-
     "card_7_name": "",
     "card_7_tripName": "Rückmeldung vom Juni 2022 / Amorgos-Naxos ",
     "card_7_text": "Liebes Laros-Team Wir sind zurück von sonnigen, schönen Tagen auf Amorgos und Naxos. Gerne gebe ich Ihnen ein kurzes Feedback: Alles hat bestens geklappt, die Unterkünfte auf Amorgos und Naxos haben uns gut gefallen, das Personal war sehr aufmerksam und hilfsbereit und wir können sie weiterempfehlen. Die Lage war ideal, ruhig und doch zentral und zu Fuss sind Tavernen und Läden gut erreichbar. Auch für Wanderungen sind diese beiden Inseln super. Es hat viele gut markierte bzw. nummerierte Wanderwege. Nochmals vielen Dank für Ihre immer gute Beratung. Das wird nicht unsere letzte Reise auf eine griechische Insel sein!!! Herzliche Grüsse"
   },
-
   "faq": {
     "pageTitle": "HÄUFIG GESTELLTE FRAGEN",
     "pageDescription": "Eine Reise nach Griechenland ist ein Erlebnis! Es kann sein, dass vor, während oder nach der Reise Fragen auftauchen, welche wir Ihnen gerne beantworten möchten. Deshalb haben wir die häufigsten Fragen unserer Kunden gesammelt und beantworten diese hier. Sollten Sie weitere Fragen haben, können Sie uns gerne kontaktieren.",
-
     "sectionTitle1": "WARUM MIT LAROS REISEN dem Alltag entfliehen?",
     "section_1_title_1": "Was sind meine Vorteile bei Buchung einer Reise über Laros Reisen?",
     "section_1_text_1": "- Wir haben ein kompetentes und professionelles Team, welches Sie in jedem Bereich der Reise unterstützt. - Wir kennen die meisten Unterkünfte persönlich und können daher genau das Richtige für Sie finden. Buchen Sie Ihre Reise bei Spezialisten! - Bei uns können Sie das authentische Griechenland buchen. Sie profitieren dabei auch von den persönliche Erfahrungen und Empfehlungen unserer Reiseexpertinnen. - Wir stellen Ihnen gerne eine Ihren Wünschen und Vorstellungen entsprechende massgeschneiderte Reise individuell zusammen. - Wir reagieren mit unserem 24h Notfalldienst sofort bei unerwartet auftretenden Problemen. - Vor Ort in Griechenland haben wir Deutsch sprechende Ansprechpartner. - Wir sind für Sie da, damit Sie einen sorgenfreien Urlaub haben (Rundum-Sorglos-Paket). - Als Mitglied im Verband „Travel Professionals Switzerland“ nutzen wir die Vorteile einer Einkaufsgemeinschaft und bieten Ihnen bestmögliche Konditionen für Ihre Buchung.",
@@ -123,7 +112,6 @@
     "section_1_text_5": "Nein. Da wir direkte Verträge mit den Unterkünften und Agenturen vor Ort haben, können wir Ihnen bestmögliche Konditionen anbieten.",
     "section_1_title_6": "Ist eine Buchung über Hotelportale nicht günstiger?",
     "section_1_text_6": "Bei grossen All Inclusive Hotels können gängige Hotelportale unter Umständen günstigere Preise anbieten. Da wir jedoch Unterkünfte abseits vom Massentourismus anbieten und unsere direkten Partner vor Ort haben, können wir auf bessere Verträge zurückgreifen und Ihnen Reisen mit einem sehr guten Preis-Leistungsverhältnis anbieten.",
-
     "sectionTitle2": "VOR DER REISE",
     "section_2_title_1": "Wie erfolgt die Zahlung meiner Reise?",
     "section_2_text_1": "Nach Ihrer Buchung schicken wir Ihnen die Rechnung mit QR-Code zu. Die Anzahlung ist innerhalb einer Woche zu leisten, die Restzahlung ca. 5-6 Wochen vor Ihrer Abreise. Ausnahme: Flugbuchungen sind sofort zu begleichen.",
@@ -131,24 +119,20 @@
     "section_2_text_2": "Bedingt durch die schnelllebige Zeit erhalten Sie die Reiseunterlagen bis spätestens 2 Wochen vor Ihrer Abreise. Für Kurzentschlossene können wir die Reiseunterlagen auch unmittelbar vor der Abreise erstellen.",
     "section_2_title_3": "Bekomme ich mit den Reiseunterlagen einen Reiseführer?",
     "section_2_text_3": "Unsere Reiseunterlagen sind sehr ausführlich. Sie bekommen detaillierte Informationen über den gesamten Reiseablauf mit den gebuchten Flügen, Transfers, Mietwagen und Unterkünften. Mit den Unterlagen erhalten Sie auch eine Karte der jeweiligen Inseln bzw. Destinationen. Informationen und Tipps geben wir Ihnen gerne persönlich.",
-
     "sectionTitle3": "WÄHREND DER REISE",
     "section_3_title_1": "Wer betreut mich vor Ort?",
     "section_3_text_1": "Mit Ihren Reiseunterlagen bekommen Sie eine Notfallnummer unserer Deutsch sprechenden Mitarbeiterin vor Ort, die Ihnen jederzeit und rund um die Uhr zuverlässig weiterhelfen kann. Wir haben auf vielen Inseln ebenfalls eine langjährige Zusammenarbeit mit lokalen Partneragenturen, welche Ihnen von der Ankunft bis zur Abreise als Ansprechpartner zur Seite stehen und Sie bei eventuell auftretenden Problemen unterstützen.",
     "section_3_title_2": "Was tun, wenn eine Leistung nicht der Buchung entspricht?",
     "section_3_text_2": "Wir möchten Ihnen einen Urlaub ermöglichen, der voll und ganz Ihren Erwartungen entspricht. Sollte eine Leistung jedoch nicht Ihren Erwartungen entsprechen, möchten wir Sie bitten, sich entweder direkt an den Leistungsträger oder an unsere Agentur vor Ort zu wenden. Unsere Mitarbeiter vor Ort werden Ihnen weiterhelfen und eine bestmögliche Lösung finden.",
-
     "sectionTitle4": "NACH DER REISE",
     "section_4_title_1": "Was tun, wenn es vor Ort kurzfristige Änderungen gibt?",
     "section_4_text_1": "Sollte es vor Ort zu kurzfristigen Änderungen bei Unterkünften, Fähr- und Flugverbindungen kommen, werden wir die Umbuchung bzw. Anpassung im Reiseablauf für Sie übernehmen. Eventuell anfallende Mehrkosten müssen wir Ihnen dann in Rechnung stellen. Gegebenenfalls können Sie diese Mehrkosten gegenüber Ihrer Versicherung geltend machen. Wir empfehlen Ihnen deshalb dringend den Abschluss einer Reiseversicherung",
     "section_4_title_2": "Wie kann ich meine Reiseerfahrung mit anderen teilen?",
     "section_4_text_2": "Wir freuen uns immer über eine Rückmeldung zu Ihrer Reise. Für uns ist es dabei wichtig, mit Ihrer Rückmeldung unseren Service zu prüfen und stetig zu verbessern. Sie können Kundenrückmeldungen auf unserer Homepage finden. Wir möchten Ihnen damit die Möglichkeit geben, von den Erfahrungen unserer Reisenden Gebrauch zu machen und in Ihre Reiseplanung einzubeziehen.",
-
     "sectionTitle5": "ALLGEMEINES",
     "section_5_title_1": "Kann ich die Flüge selbst buchen?",
     "section_5_text_1": "Ja. Sie können die Flüge auch selbst buchen. Es ist dabei wichtig zu wissen, dass wir keinerlei Haftung übernehmen, falls es zu einer Flugplanänderung kommt und Anschlussleistungen nicht erfüllt werden können. Entstehende Mehrkosten sind von Ihnen zu leisten."
   },
-
   "career": {
     "title": "Karriere",
     "description": "Wir suchen Reise-Enthusiasten, die ihre Leidenschaft für das Reisen mit unseren Kunden teilen möchten und sich darauf freuen, gemeinsam mit uns Großes zu erreichen.",
@@ -171,7 +155,6 @@
     "thankYou": "Vielen Dank für Ihr Interesse an unserer Firma.",
     "thankYouDescr": "Unsere Personalabteilung hat Ihren Lebenslauf erhalten. Viel Glück!"
   },
-
   "aboutModal": {
     "modalTitle": "Bewerbung bei LAROS Reisen",
     "close": "Schliessen",
@@ -306,6 +289,7 @@
   },
   "travelPlannerTripPlan": {
     "day": "Tag",
+    "days": "Tage",
     "proPerson": "pro Person",
     "addRoom": "Zimmer hinzufügen",
     "startTripButton": "Reiseplanung starten",
@@ -358,16 +342,13 @@
     "thankYou": "Vielen Dank für Ihre Nachricht!",
     "thankYouDescr": "Das Laros-Team wird Sie umgehend kontaktieren!"
   },
-
   "tripSteps": {
-
     "transfer": {
       "ferry": "Fähre",
       "airport": "Airport",
       "carRental": "Rental",
       "carPickUp": "Pick-up"
     },
-
     "buttonBack": "Zurück zum vorherigen Schritt",
     "buttonReset": "Alle Änderungen zurücksetzen",
     "title": "Unexplored Peloponnese",
@@ -412,7 +393,6 @@
     "endPoint": "Endpunkt",
     "out": "aus"
   },
-
   "changingRoomType": {
     "windowTitle": "Zimmerkategorie ändern",
     "close": "Schliessen",
@@ -676,7 +656,6 @@
     "address": "Adresse und Öffnungszeiten",
     "phone": "Telefonnummer und E-Mail"
   },
-
   "forms": {
     "inputLabel1": "E-Mail",
     "inputLabel2": "E-Mail-Adresse",
