fix for contact from info (#231)

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -188,7 +188,8 @@
     "selected": "Sie haben ausgewählt",
     "info": "Kontaktinformationen",
     "cancel": "Abbrechen",
-    "buttonSend": "Senden Sie",
+    "buttonSend": "Senden",
+    "videoAppointment": "Beratung",
     "downloadModalTitle": "Herunterladen der Broschüre",
     "buttonDownload": "Herunterladen",
     "thankYou": "Vielen Dank für ihr Interesse.",
