fix contact form Voucher

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -599,9 +599,9 @@
     "useText3": "Barauszahlung, Umtausch und nachträgliche Rückzahlung für bereits gebuchte Reisen sind ausgeschlossen.",
     "invoiceBlock": "Versand von  Geschenkgutscheinen & Rechnung",
     "invoiceBlock1": "Versand des/der Geschenkgutschein(e): nach Eingang des Rechnungsbetrages",
-    "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail von der ausgewählten Filiale zugesandt.",
-    "invoiceBlock3": "Gültigkeit:Der Gutschein wird nach Zahlung des Rechnungsbetrages gültig.",
-    "buttonDone": "Erledigt",
+    "invoiceBlock2": "Rechnungsversand: Nach dem Absenden des Bestellformulars wird Ihnen die Rechnung per separater E-Mail zugesandt.",
+    "invoiceBlock3": "Gültigkeit: Der Gutschein wird nach Zahlung des Rechnungsbetrages gültig.",
+    "buttonDone": "Absenden",
     "thankYou": "Vielen Dank für Ihre Bestellung.",
     "thankYouDescr": "Das Laros-Team bearbeitet momentan Ihre Bestellung. Ihr Geschenkgutschein ist unterwegs!",
     "thankYouStore": "Vielen Dank für Ihre Bestellung.",
