fix insider tips (#243)

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -215,6 +215,7 @@
     "OverviewTitle": "Überblick",
     "pre-definedTrips": "Fertige Reiseprogramme nach",
     "pre-definedSubTrips": "Wählen Sie die Reise, die am Besten zu Ihnen passt, und lassen Sie sich von uns zu den schönsten Orten bringen!",
+    "insiderTipsTitle": "Insider Tipps",
     "HotelsInTitle": "Hotels in",
     "HotelsInSubTitle": "Hotels für jeden Geschmack! Ob Meerblick, direkt am Strand oder besondere Unterkunftsarten, unser Team hat die untenstehenden Hotels für Sie sorgfältig ausgwählt. Erfahren Sie mehr in der folgenden Liste."
   },
